--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Nawras M. Amin | Personal Website
 description: Personal Website of Nawras M. Amin
 baseurl: '/cv' # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+url: 'thestrix.ca' # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
 username: Nawras M. Amin
