--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: ''
 keywords:
 author: Strix
 language: en
-timezone: 'UTC/GMT -5'
+timezone: 'America/New_York|EST EDT|50 40|0101|1Lz50 1zb0 Op0'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -41,7 +41,7 @@ external_link:
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
-relative_link: false
+relative_link: true
 future: true
 highlight:
   enable: true
@@ -97,7 +97,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: 
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
