--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.2.1",
     "@next/font": "^13.1.1",
@@ -17,12 +20,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "classnames": "^2.3.2",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
+    "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^13.1.1",
