--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@next/mdx": "^13.1.1",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@tailwindcss/typography": "^0.5.9"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
