feat: lots of work on project canvas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
             "@lib/*": ["lib/*"],
             "@styles/*": ["styles/*"],
             "@utils/*": ["utils/*"],
+            "@interfaces/*": ["interfaces/*"],
             "@layouts/*": ["layouts/*"]
         }
     },
