--- a/lib/example-projects.json
+++ b/lib/example-projects.json
@@ -1,6 +1,6 @@
 [
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 255,
@@ -28,7 +28,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
@@ -56,7 +56,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 255,
@@ -84,7 +84,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
@@ -112,7 +112,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 255,
@@ -140,7 +140,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
@@ -168,7 +168,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 255,
@@ -196,7 +196,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
@@ -224,7 +224,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 255,
@@ -252,7 +252,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
@@ -280,7 +280,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 255,
@@ -308,7 +308,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
@@ -336,7 +336,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 255,
@@ -364,7 +364,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
@@ -392,7 +392,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 255,
@@ -420,7 +420,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
@@ -448,7 +448,7 @@
         "url": "https://app.pizzasparta.ca"
     },
     {
-        "image": "#",
+        "image": "https://app.pizzasparta.ca/en/favicon.ico",
         "bopacity": 0.5,
         "bcolor": {
             "R": 0,
