--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tailwindcss/typography": "^0.5.9",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.57.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
@@ -35,7 +36,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.21",
-    "react-p5": "^1.3.33",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.8.3"
   }
