--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
             "@layouts/*": ["layouts/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/ReactCircularGraph.js"],
     "exclude": ["node_modules"]
 }
