--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "next": "latest",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-inlinesvg": "^3.0.1",
         "sass": "^1.57.1"
     },
     "devDependencies": {
