--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
         "@mdx-js/react": "^2.2.1",
         "@next/font": "^13.1.1",
         "@next/mdx": "^13.1.1",
+        "@sanity/cli": "^3.2.4",
         "@tailwindcss/typography": "^0.5.9",
+        "gray-matter": "^4.0.3",
         "next": "latest",
+        "next-mdx-remote": "^4.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-inlinesvg": "^3.0.1",
+        "rehype-autolink-headings": "^6.1.1",
+        "rehype-code-titles": "^1.1.0",
+        "rehype-prism-plus": "^1.5.0",
+        "rehype-slug": "^5.1.0",
+        "remark-gfm": "^3.0.1",
         "sass": "^1.57.1"
     },
     "devDependencies": {
