--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
         "@tailwindcss/typography": "^0.5.9",
         "gray-matter": "^4.0.3",
         "next": "latest",
-        "next-mdx-remote": "^4.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-inlinesvg": "^3.0.1",
         "rehype-autolink-headings": "^6.1.1",
         "rehype-code-titles": "^1.1.0",
-        "rehype-prism-plus": "^1.5.0",
+        "rehype-highlight": "^6.0.0",
         "rehype-slug": "^5.1.0",
         "remark-gfm": "^3.0.1",
         "sass": "^1.57.1"
