--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
         "@next/mdx": "^13.1.1",
         "@sanity/cli": "^3.2.4",
         "@tailwindcss/typography": "^0.5.9",
-        "gray-matter": "^4.0.3",
         "next": "latest",
+        "nextjs-google-analytics": "^2.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-inlinesvg": "^3.0.1",
@@ -27,19 +27,16 @@
         "rehype-highlight": "^6.0.0",
         "rehype-slug": "^5.1.0",
         "remark-gfm": "^3.0.1",
-        "sass": "^1.57.1",
-        "use-delayed-render": "^0.0.7"
+        "sass": "^1.57.1"
     },
     "devDependencies": {
-        "@types/react": "^18.0.27",
         "@types/node": "^12.12.21",
+        "@types/react": "^18.0.27",
         "autoprefixer": "^10.4.13",
         "classnames": "^2.3.2",
         "eslint": "8.31.0",
-        "eslint-config-airbnb": "^19.0.4",
         "eslint-config-next": "^13.1.1",
         "eslint-config-prettier": "^8.6.0",
-        "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.32.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "next-themes": "^0.2.1",
