--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
         "rehype-highlight": "^6.0.0",
         "rehype-slug": "^5.1.0",
         "remark-gfm": "^3.0.1",
-        "sass": "^1.57.1"
+        "sass": "^1.57.1",
+        "theme-change": "^2.5.0",
+        "webpack": ">=4"
     },
     "devDependencies": {
         "@types/node": "^12.12.21",
         "@types/react": "^18.0.27",
         "autoprefixer": "^10.4.13",
         "classnames": "^2.3.2",
+        "daisyui": "^4.6.1",
         "eslint": "8.31.0",
         "eslint-config-next": "^13.1.1",
         "eslint-config-prettier": "^8.6.0",
